5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1716_2506.log
== TEST (2019-05-14 17:42:28) 
-- CODE:
anos = 0
qtd = float(input("quantidade inicial:"))
percentual-crescimento = float(input("percentual de cres: "))
qtd-retirada-ano = float(input("retirada: "))
while (0 < qtd < 12000)
       acrescimo = qtd* percentual-crescimento/100
	    qtd+= acrescimo
	    qtd -= qtd-retirada-2*0
		anos+=1
		if(qtd <=0) :
			print("extinsao")
		else
		  print("limite")
		print(anos)
-- ERROR:
File "XXXX", line 5
    while (0 < qtd < 12000)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:43) 
-- CODE:
anos = 0
qtd = float(input("quantidade inicial:"))
percentual-crescimento = float(input("percentual de cres: "))
qtd-retirada-ano = float(input("retirada: "))
    while (0 < qtd < 12000)
       acrescimo = qtd* percentual-crescimento/100
	    qtd+= acrescimo
	    qtd -= qtd-retirada-2*0
		anos+=1
		if(qtd <=0) :
			print("extinsao")
		else
		  print("limite")
		print(anos)
-- ERROR:
File "XXXX", line 5
    while (0 < qtd < 12000)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:42:57) 
-- CODE:
anos = 0
qtd = float(input("quantidade inicial:"))
percentual-crescimento = float(input("percentual de cres: "))
qtd-retirada-ano = float(input("retirada: "))
    while (0 < qtd < /2000)
       acrescimo = qtd* percentual-crescimento/100
	    qtd+= acrescimo
	    qtd -= qtd-retirada-2*0
		anos+=1
		if(qtd <=0) :
			print("extinsao")
		else
		  print("limite")
		print(anos)
-- ERROR:
File "XXXX", line 5
    while (0 < qtd < /2000)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:43:35) 
-- CODE:
anos = 0
qtd = float(input("quantidade inicial:"))
percentual-crescimento = float(input("percentual de cres: "))
qtd-retirada-ano = float(input("retirada: "))
    while(0<qtd<12000)
       acrescimo = qtd* percentual-crescimento/100
	    qtd+= acrescimo
	    qtd-= qtd-retirada-2*0
		anos+=1
		if(qtd <=0) :
			print("extinsao")
		else
		  print("limite")
		print(anos)
-- ERROR:
File "XXXX", line 5
    while(0<qtd<12000)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:43:49) 
-- CODE:
anos = 0
qtd = float(input("quantidade inicial:"))
percentual-crescimento = float(input("percentual de cres: "))
qtd-retirada-ano = float(input("retirada: "))
    while(0<qtd<12000)
       acrescimo = qtd* percentual-crescimento/100
	    qtd+= acrescimo
	    qtd-= qtd-retirada-2*0
		anos+=1
		if(qtd <=0) :
			print("extinsao")
		else
		  print("limite")
		print(anos)
-- EXECUTION TIME:
0.128315
-- ERROR:
  File "/home/codebench/codes/1716/2506/main.py", line 5
    while(0<qtd<12000)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
